--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">HedgehodTestApp</string>
     <string name="jokes">Jokes</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="browser">browser</string>
+    <string name="browser">Browser</string>
     <string name="count_of_jokes">Count of jokes</string>
     <string name="reload">Reload</string>
 </resources>
