--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="browser">Browser</string>
     <string name="count_of_jokes">Count of jokes</string>
     <string name="reload">Reload</string>
+    <string name="write_number">Write numbers of jokes</string>
 </resources>
